--- a/src/maqueta.html
+++ b/src/maqueta.html
@@ -10,11 +10,18 @@
 <body>
 
     
-
-    <div class="w-60 h-full shadow-md bg-white px-1 absolute">
+    <button id="btnDesktop" class="p-2 ml-3 text-sm text-gray-500 rounded-lg hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:focus\:ring-blue-300" data-collapse-toggle="mobile-menu" type="button"  aria-controls="mobile-menu" aria-expanded="false" fixed>
+        <svg id="iconOpen" class="text-black w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+        </svg>
+        <svg id="iconClose" class="text-black hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+    </button>
+    <div class="w-60 h-full shadow-md bg-blue-700 px-1 fixed" id="mobile-menu">
         <!-- ENG Botón responsive -->
-        <button id="bntResponsive" class="p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:focus\:ring-blue-300" data-collapse-toggle="mobile-menu" type="button"  aria-controls="mobile-menu" aria-expanded="false">
-            <svg id="iconOpen" class="text-black w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+        <button id="bntResponsive" class="p-2 ml-3 text-sm text-gray-500 rounded-lg md: hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:focus\:ring-blue-300" data-collapse-toggle="mobile-menu" type="button"  aria-controls="mobile-menu" aria-expanded="false">
+            <svg id="iconOpen" class="text-black w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+            </svg>
             <svg id="iconClose" class="text-black hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
         </button>
         <ul class="relative">
@@ -94,6 +101,7 @@
 				menuResponsive.classList.remove('hidden');
                 btnOpen.classList.add('hidden');
                 btnClose.classList.remove('hidden');
+
 			} else {
 				menuResponsive.classList.add('hidden');
                 btnClose.classList.add('hidden');
@@ -103,6 +111,9 @@
 
         const btnMenu = document.getElementById('bntResponsive');
         btnMenu.addEventListener('click', hideShow)
+
+        const btnDesktop = document.getElementById('btnDesktop');
+        btnDesktop.addEventListener('click', hideShow)
     </script>
 
 
