Archivos eliminados y bug resuelto

--- a/src/maqueta.html
+++ b/src/maqueta.html
@@ -18,7 +18,7 @@
     </button>
     <div class="w-60 h-full shadow-md bg-blue-700 px-1 fixed" id="mobile-menu">
         <!-- ENG Botón responsive -->
-        <button id="bntResponsive" class="p-2 ml-3 text-sm text-gray-500 rounded-lg md: hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:focus\:ring-blue-300" data-collapse-toggle="mobile-menu" type="button"  aria-controls="mobile-menu" aria-expanded="false">
+        <button id="bntResponsive" class="p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:focus\:ring-blue-300" data-collapse-toggle="mobile-menu" type="button"  aria-controls="mobile-menu" aria-expanded="false">
             <svg id="iconOpen" class="text-black w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
             </svg>
